--- a/force-app/main/tests/classes/Test_ExternalParticipantRemote.cls
+++ b/force-app/main/tests/classes/Test_ExternalParticipantRemote.cls
@@ -28,6 +28,9 @@ public class Test_ExternalParticipantRemote {
         ep.countryCode = 'USA';
         ExternalParticipantRemote.saveParticipant(JSON.serialize(ep));
     
+        httpMock.returnEmpty = true;
+        ExternalParticipantRemote.saveParticipant(JSON.serialize(ep));
+    
         ExternalParticipantRemote.getExternalParticipants('patientId');
     }
 }
