Fix rounded decimal

--- a/force-app/main/default/classes/VisitReportService.cls
+++ b/force-app/main/default/classes/VisitReportService.cls
@@ -61,7 +61,7 @@ public inherited sharing class VisitReportService {
                                 reportHeaderWrappers.add(new VisitReportContainerRemote.VisitDataWrapper(visitResult.Result_Type__c));
                             }
                             Decimal rounded = visitResult.Actual_Value__c.setScale(4, RoundingMode.HALF_UP).stripTrailingZeros();
-                            String value = String.valueOf(rounded);
+                            String value = rounded.toPlainString();
                             reportRowWrappers.add(new VisitReportContainerRemote.VisitDataWrapper(value, visitResult.Measurement__c));
                             isResult = true;
                         } else {
