--- a/force-app/main/default/classes/VisitReportService.cls
+++ b/force-app/main/default/classes/VisitReportService.cls
@@ -100,9 +100,11 @@ public inherited sharing class VisitReportService {
         result.profilePicture = pState.ctp.Profile_Picture__c;
         result.participantFullName = pState.participant.Full_Name__c;
         result.participantLastName = pState.participant.Last_Name__c;
-        Datetime dT = pState.pe.CreatedDate;
-        Date myDate = Date.newInstance(dT.year(), dT.month(), dT.day());
-        result.enrollmentDate = DateService.format(myDate, 'DD-MMM-YYYY');
+        if (pState.pe.Enrolled_Date__c != null) {
+            Datetime dT = pState.pe.Enrolled_Date__c;
+            Date myDate = Date.newInstance(dT.year(), dT.month(), dT.day());
+            result.enrollmentDate = DateService.format(myDate, 'DD-MMM-YYYY');
+        }
         result.studySiteName = pState.pe.Study_Site__r.Name;
         return result;
     }
